--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" != "release" ]; then
               if [ "${CIRCLE_PROJECT_USERNAME}" == "akkeris" ]; then 
                 docker login -u $DOCKER_LOGIN -p $DOCKER_PASS
-                docker tag logshuttle "docker.io/akkeris/logshuttle-fluentd:${CIRCLE_BRANCH}-${CIRCLE_BUILD_NUM}"
+                docker tag logshuttle-fluentd "docker.io/akkeris/logshuttle-fluentd:${CIRCLE_BRANCH}-${CIRCLE_BUILD_NUM}"
                 docker push "docker.io/akkeris/logshuttle-fluentd:${CIRCLE_BRANCH}-${CIRCLE_BUILD_NUM}"
                 if [ "${CIRCLE_BRANCH}" == "master" ]; then
                   docker tag logshuttle-fluentd "docker.io/akkeris/logshuttle-fluentd:release-${CIRCLE_BUILD_NUM}"
