--- a/fluent.conf
+++ b/fluent.conf
@@ -45,7 +45,7 @@
 <match **>
   @type kafka_buffered
   zookeeper kafkalogs-zookeeper:2181 # Set brokers via Zookeeper
-  zookeeper_path /kafka/brokers/ids
+  zookeeper_path /brokers/ids
   default_topic default
   output_data_type json
   output_include_tag  false
